--- a/src/main/resources/ubb/program-view.fxml
+++ b/src/main/resources/ubb/program-view.fxml
@@ -20,19 +20,20 @@
             <TextField fx:id="numberOfProgramStatesAsTextView" editable="false" />
             <GridPane prefHeight="306.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="402.39996337890625" minWidth="10.0" prefWidth="399.20001220703125" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="441.60003662109375" minWidth="10.0" prefWidth="400.79998779296875" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <TableView fx:id="heapTableView" prefHeight="200.0" prefWidth="200.0">
                     <columns>
-                      <TableColumn fx:id="heapAddressColumn" prefWidth="208.00003051757812" text="Address" />
-                      <TableColumn fx:id="heapValueColumn" prefWidth="190.4000244140625" text="Value" />
+                      <TableColumn fx:id="heapAddressColumn" prefWidth="200.00000303983688" text="Address" />
+                      <TableColumn fx:id="heapValueColumn" prefWidth="199.1999969482422" text="Value" />
                     </columns>
                   </TableView>
                   <ListView fx:id="outputListView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
@@ -40,11 +41,17 @@
                   <ListView fx:id="programStatesIdentifiersView" onMouseClicked="#populate" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TableView fx:id="symbolTableView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                     <columns>
-                      <TableColumn fx:id="symbolVariableColumn" prefWidth="195.20001220703125" text="Variable name" />
-                      <TableColumn fx:id="symbolValueColumn" prefWidth="204.0" text="Value" />
+                      <TableColumn fx:id="symbolVariableColumn" prefWidth="199.99997252225876" text="Variable name" />
+                      <TableColumn fx:id="symbolValueColumn" prefWidth="200.00001525878906" text="Value" />
                     </columns>
                   </TableView>
-                  <ListView fx:id="executionStackView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <ListView fx:id="executionStackView" prefHeight="178.0" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TableView fx:id="lockTableView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                    <columns>
+                      <TableColumn fx:id="lockTableAddressColumn" prefWidth="196.00000303983688" text="Address" />
+                      <TableColumn fx:id="lockTableValueColumn" prefWidth="203.1999969482422" text="Value" />
+                    </columns>
+                  </TableView>
                </children>
             </GridPane>
             <HBox alignment="CENTER" fillHeight="false" prefHeight="70.0" prefWidth="600.0">
