--- a/src/main/resources/ubb/program-view.fxml
+++ b/src/main/resources/ubb/program-view.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ubb.business.view_controllers.ProgramController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ubb.business.view_controllers.ProgramController">
    <children>
       <VBox alignment="CENTER" layoutX="300.0" layoutY="40.0" prefHeight="400.0" prefWidth="845.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextField fx:id="numberOfProgramStatesAsTextView" editable="false" prefHeight="26.0" prefWidth="850.0" />
+            <TextField fx:id="numberOfProgramStates" editable="false" prefHeight="26.0" prefWidth="850.0" />
             <GridPane prefHeight="306.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -25,12 +25,15 @@
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="120.79998626708985" minHeight="0.0" prefHeight="20.600009155273437" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="315.8" minHeight="10.0" prefHeight="142.19999084472656" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="221.2000030517578" minHeight="10.0" prefHeight="23.19999999999999" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="251.2000274658203" minHeight="10.0" prefHeight="176.40002441406247" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="176.80002441406248" minHeight="2.3999725341796534" prefHeight="21.999975585937477" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="176.80002441406248" minHeight="10.0" prefHeight="159.99999389648434" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TableView fx:id="heapTableView" prefHeight="200.0" prefWidth="200.0">
+                  <TableView fx:id="heapTableView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                     <columns>
                       <TableColumn fx:id="heapAddressColumn" prefWidth="208.00003051757812" text="Address" />
                       <TableColumn fx:id="heapValueColumn" prefWidth="190.4000244140625" text="Value" />
@@ -39,10 +42,10 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <ListView fx:id="outputListView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-                  <ListView fx:id="fileTableView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
-                  <ListView fx:id="programStatesIdentifiersView" onMouseClicked="#populate" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TableView fx:id="symbolTableView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                  <ListView fx:id="outputListView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <ListView fx:id="fileTableView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" />
+                  <ListView fx:id="programStatesIdentifiersView" onMouseClicked="#populate" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TableView fx:id="symbolTableView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
                     <columns>
                       <TableColumn fx:id="symbolVariableColumn" prefWidth="195.20001220703125" text="Variable name" />
                       <TableColumn fx:id="symbolValueColumn" prefWidth="204.0" text="Value" />
@@ -51,8 +54,8 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <ListView fx:id="executionStackView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TableView fx:id="procedureTableView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
+                  <ListView fx:id="executionStackView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TableView fx:id="procedureTableView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                     <columns>
                       <TableColumn fx:id="procedureNameColumn" minWidth="0.0" prefWidth="90.40002286434174" text="Function name" />
                       <TableColumn fx:id="parametersBodyColumn" prefWidth="173.59992218017578" text="Parameters and body" />
@@ -61,7 +64,7 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <TableView fx:id="semaphoreTableView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <TableView fx:id="semaphoreTableView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
                     <columns>
                       <TableColumn fx:id="semaphoreIndexColumn" prefWidth="50.399961829185486" text="Index" />
                       <TableColumn fx:id="semaphoreValueColumn" prefWidth="51.199951171875" text="Value" />
@@ -71,9 +74,24 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
+                  <TableView fx:id="latchTableView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                    <columns>
+                      <TableColumn fx:id="latchTableAddressColumn" prefWidth="133.59998166561127" text="Address" />
+                      <TableColumn fx:id="latchTableValueColumn" prefWidth="131.99994506835935" text="Value" />
+                    </columns>
+                  </TableView>
+                  <TextField alignment="CENTER" editable="false" text="Heap Table" />
+                  <TextField alignment="CENTER" text="Output List" GridPane.columnIndex="1" />
+                  <TextField alignment="CENTER" text="Procedure Table" GridPane.columnIndex="2" />
+                  <TextField alignment="CENTER" editable="false" text="File Table" GridPane.rowIndex="2" />
+                  <TextField alignment="CENTER" editable="false" text="Execution Stack" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField alignment="CENTER" text="Semaphore Table" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <TextField alignment="CENTER" editable="false" text="Symbol Table" GridPane.rowIndex="4" />
+                  <TextField alignment="CENTER" editable="false" text="Program States Identifiers" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TextField alignment="CENTER" editable="false" text="Latch Table" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                </children>
             </GridPane>
-            <HBox alignment="CENTER" fillHeight="false" prefHeight="70.0" prefWidth="600.0">
+            <HBox alignment="CENTER" fillHeight="false" prefHeight="42.0" prefWidth="849.0">
                <children>
                   <Button fx:id="oneStepButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleOneStepButton" text="One step" />
                   <Button fx:id="allStepsButton" mnemonicParsing="false" onAction="#handleAllStepsButton" text="All steps">
